fix bugs and refactor build cmd